# lex

./: README.md  design.md  main.py  pyproject.toml  roadmap.md
api/: __init__.py  main.py  pyproject.toml
api/core/: config.py  deps.py
api/db/: __init__.py  mongodb.py
api/routes/: health.py  logs.py
api/schemas/: __init__.py  log_entry.py
services/: pyproject.toml
shared/schemas/: log_entry.py
