[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "graphviz>=0.20.3",
    "motor>=3.7.0",
    "pydantic-settings>=2.8.1",
    "pymongo>=4.11.3",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]
